# Algorithms-Design

./: .gitignore  .gitmodules
list1/: example.py  task1.py  task2.py  task3.py  task4.py  task5.py
list10/: robots.py  task1.py  task2.py  task3.py  task4.graphml  task4.py  task5.py  task5_niespojny.graphml  test.py
list11/: graph_test.txt  robots.py  task1.py  task2.py  task3.py  test.py  tree.txt  tree2.py
list2/computation/: config.json  handlers.py  machine.py  task2.py  task3.py  task4.py  task5.py
list2/task3/: config.json  main.py
list2/task4/: main.py
list2/task5/: main.py
list3/: exercises.py
list3/computation/: handlers.py  machine.py  task1.json  task1.py  task2.py  task3.py  task4.py  task5.py  test3.txt
list3/tests/: test_machine.py
list4/: task.py  task1.py  task2.py  task3.py  task4.py  task5.py  test_task1.py
list5/: task1.py  task2.py  task3.py  task4.py  task5.py
list6/: pyproject.toml
list6/list6/: NWD.py  cipher.py  erastotenes.py  fermat.py  miller_rabin.py  new_test.py  p_rsa.py  perf_test.py  primary.py  test.py
list7/: compare.py  fft_multiply.py  naive_multiply.py  naive_multiply_ll.py  pyproject.toml  test.py  test_2.py  test_3.py  transform.py
list7/signal/: display.py  filter.py  generate.py
list8/: pyproject.toml  test.py  tt.json  ttt.json
list8/list8/: alpha_compare.py  binary.py  hash.py  hash_dict.py  hash_orginal.py  linear.py  tablica.txt  ttt.json  visualize.py
list8/list8/data/: robots.py  tt.json
list9/: pyproject.toml
list9/list9/: counting_sort.py  heapsort.py  perf.py  quicksort.py  robots.py  (+2 more)
(+21 files in other folders)
