[tool.poetry]
name = "list7"
version = "0.1.0"
description = ""
authors = ["11jolek11 <dabrowskiandrzej094@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
wrapt = "^1.15.0"
dill = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
